...

            <EditText
                    android:id="@+id/combinedFeedSearchBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
...
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                    android:id="@+id/btn_add_via_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    app:drawableStartCompat="?attr/content_new"
                    app:drawableLeftCompat="?attr/content_new"
                    android:paddingTop="8dp"
...
